# redx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
packaging/: PKGBUILD  README.md  build_appimage.sh  io.github.mescon.redx.metainfo.xml  io.github.mescon.redx.yml  python3-build-deps.json  python3-send2trash.json  redx.desktop
redx/: __init__.py  __main__.py  config.py  deleter.py  protect.py  scanner.py
redx/ui/: __init__.py  filters_tab.py  log_widget.py  main_window.py  settings.py  settings_tab.py  tree_widget.py  workers.py
scripts/: build_sandbox.py  take_screenshots.py
tests/: conftest.py  sandbox_builder.py  test_deleter.py  test_filters_tab.py  test_protect.py  test_sandbox_integration.py  test_scanner.py  test_settings.py
