[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redx"
version = "0.1.0"
description = "Find and delete empty directories: Linux port of RED (Remove-Empty-Directories)"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "redx contributors" }]
keywords = ["empty", "directory", "cleanup", "filesystem", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6 >= 6.6",
    "send2trash >= 1.8",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-cov",
    "pytest-qt >= 4.4",
]

[project.gui-scripts]
redx = "redx.__main__:main"

[project.urls]
Upstream = "https://github.com/hxseven/Remove-Empty-Directories"

[tool.hatch.build.targets.wheel]
packages = ["redx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
