[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redx"
version = "0.1.0"
description = "Find and delete empty directories: Linux port of RED (Remove-Empty-Directories)"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "redx contributors" }]
keywords = ["empty", "directory", "cleanup", "filesystem", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6 >= 6.6",
    "send2trash >= 1.8",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-cov",
    "pytest-qt >= 4.4",
]

[project.gui-scripts]
redx = "redx.__main__:main"

[project.urls]
Homepage = "https://github.com/mescon/redx"
Source = "https://github.com/mescon/redx"
Issues = "https://github.com/mescon/redx/issues"
Upstream = "https://github.com/hxseven/Remove-Empty-Directories"

[tool.hatch.build.targets.wheel]
packages = ["redx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
# 100 matches the project's existing line conventions; PEP 8's 79 is
# routinely ignored in modern Python style guides (black uses 88).
line-length = 100

[tool.ruff.lint]
# Default + Security ruleset.
select = ["E", "F", "S"]

[tool.ruff.lint.per-file-ignores]
# In tests, ``assert`` IS the API (S101) and literal ``"/tmp/foo"`` is
# a Path placeholder, not actual /tmp filesystem use (S108).
"tests/*.py" = ["S101", "S108"]
"tests/**/*.py" = ["S101", "S108"]

[tool.bandit]
# Bandit by default already skips ``tests`` for its assert_used rule
# but be explicit so any future config tooling sees the intent.
exclude_dirs = ["tests", ".venv", "dist", "build"]
